[metadata]
name = pychart
version = attr: pychart.__version__
url = https://github.com/rinist/pychart
author = Daisuke Kondo
author_email = kondo@rinist.me
license_file = MIT

[options]
zip_safe = False
packages = find:
setup_requires =
  matplotlib
install_requires =
  pandas
  matplotlib
  pyyaml
  pillow
  click

[options.entry_points]
console_scripts =
  pychart = pychart.runner:main
