[metadata]
name = pychart
version = 0.0.1
url = https://github.com/rinist/pychart
author = Daisuke Kondo
author_email = kondo@rinist.me
license_file = MIT

[options]
zip_safe = False
packages = find:
install_requires =
    pandas>=0.24.2
    matplotlib>=3.1.0
    pyyaml>=5.1.1
    pillow>=6.0.0
    click>=7.0

[options.entry_points]
console_scripts =
    pychart = pychart.runner:main
